dataset1235/2025-2/1955397009/users/1439409056/executions/1686127217_3221148872.log
== RUN (2025-08-12 13:19:25)
-- CODE: 
j = 35
s = 40
a = j+s
print("Resultado == 'a'" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == 'a'
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == 'a'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:18:39)
-- CODE: 
j = 35
s = 40
a = 35+40
print("Resultado == a" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == a
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:16:44)
-- CODE: 
int j = 35
int s = 40
int a 
int resultado
print(jocasta + sosigenes = a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int j = 35
        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int j = 35
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:17:37)
-- CODE: 
j = 35
s = 40

print(j + s == a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(j + s == a )
                   ^
NameError: name 'a' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(j + s == a )
                   ^
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:18:11)
-- CODE: 
j = 35
s = 40
a = 35+40
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Resultado = a )
TypeError: 'Resultado' is an invalid keyword argument for print()
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Resultado = a )
TypeError: 'Resultado' is an invalid keyword argument for print()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:17:29)
-- CODE: 
j = 35
s = 40

print(j + s = a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 4
    print(j + s = a )
          ^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 4
    print(j + s = a )
          ^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:19:12)
-- CODE: 
j = 35
s = 40
a = j+s
print("Resultado == a" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == a
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:18:17)
-- CODE: 
j = 35
s = 40
a = 35+40
print(Resultado == a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Resultado == a )
          ^^^^^^^^^
NameError: name 'Resultado' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Resultado == a )
          ^^^^^^^^^
NameError: name 'Resultado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:16:27)
-- CODE: 
int jocasta = 35
int sosigenes = 40
int a 
int resultado
print(jocasta + sosigenes = a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int jocasta = 35
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int jocasta = 35
        ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:15:40)
-- CODE: 
int Jocasta = 35
int Sosigenes = 40
int a 
int resultado
print(Jocasta + Sosigenes = a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int Jocasta = 35
        ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 1
    int Jocasta = 35
        ^^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:17:19)
-- CODE: 
j = 35
s = 40

print(jocasta + sosigenes = a )
print(Resultado = a )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 4
    print(jocasta + sosigenes = a )
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 4
    print(jocasta + sosigenes = a )
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:20:56)
-- CODE: 
j = 35
s = 40
a = j+s
print(a)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:20:11)
-- CODE: 
j = 35
s = 40
a = j+s
print("Resultado == j+s" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == j+s
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
Resultado == j+s
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:20:46)
-- CODE: 
j = 35
s = 40
a = j+s
print(a)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
